--- a/DockerFile
+++ b/DockerFile
@@ -3,6 +3,7 @@ COPY . /app
 WORKDIR /app
 EXPOSE 9968
 VOLUME ["/public"]
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories && apk add git
 RUN npm i 
 ENTRYPOINT npm run start
 
